--- a/app/src/main/res/layout/activity_contacto_datos.xml
+++ b/app/src/main/res/layout/activity_contacto_datos.xml
@@ -110,7 +110,20 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/top">
 
+        <Button
+            android:id="@+id/btnEditar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="Editar Datos"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
 
 
 
