--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,51 +28,31 @@
             android:id="@+id/edtNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="italic"
-             />
+            android:textStyle="italic" />
     </LinearLayout>
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_marginTop="@dimen/top"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+        <DatePicker
+            android:id="@+id/dpCalendario"
+            android:layout_width="250dp"
+            android:layout_height="180dp"
+            android:datePickerMode="spinner"
+            android:calendarViewShown="false">
+        </DatePicker>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="@dimen/top"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/lblFecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_fecha_nac"
-            android:textSize="@dimen/label"
-            android:textStyle="bold"/>
-
-
-        <EditText
-            android:id="@+id/edtFecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:ems="10"
-            android:layout_alignBottom="@+id/btnFecha"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textStyle="italic"/>
-
-        <Button
-            android:layout_marginTop="@dimen/top"
-            android:id="@+id/btnFecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="150dip"
-            android:layout_marginLeft="10dp"
-            android:text="Cambiar Fecha"
-            android:textStyle="bold"
-            android:layout_toRightOf="@id/edtFecha"
-            android:onClick="mostrarCalendario" />
-
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
     <LinearLayout
@@ -151,14 +131,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginTop="@dimen/top">
         <Button
             android:id="@+id/btnEnviar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="150dip"
-            android:layout_marginLeft="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:text="Continuar"
             android:textStyle="bold"/>
     </LinearLayout>
